--- a/src/back-end/UserLayer/UserService/MSSQL/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/MSSQL/docker-compose.override.yaml
@@ -11,6 +11,7 @@ services:
       - user_data:/var/opt/mssql
     networks:
       - user_network
+      - rabbitmq_network
     restart: always
 
 volumes:
