--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.yaml
@@ -12,3 +12,7 @@ networks:
     name: user_network
     driver: bridge
     external: true
+  rabbitmq_network:
+    name: rabbitmq_network
+    driver: bridge
+    external: true
