--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: user_api
+    image: ath21/stls:user_api
     container_name: user_api_container
 
 networks:
