--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/appsettings.json
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "RabbitMQ": {
+    "Host": "",
+    "Port": "",
+    "Username": "",
+    "Password": "",
+    "Exchange": "",
+    "QueueName": "",
+    "RoutingKey": ""
+  }
 }
