--- a/src/back-end/UserLayer/UserService/UserAPI/user_api.k8s.service.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/user_api.k8s.service.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Service
 metadata:
-  name: user_api_container
+  name: user_api
 spec:
   type: LoadBalancer
   selector:
-    app: user_api_container
+    app: user_api
   ports:
     - port: 80
       targetPort: 8080
