--- a/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/UserService/UserAPI/docker-compose.override.yaml
@@ -11,7 +11,7 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-      mssql:
+      user_mssql:
         condition: service_started
     networks:
       - user_network
