--- a/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
+++ b/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LogData\LogData.csproj" />
+  </ItemGroup>
+
 </Project>
