--- a/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
+++ b/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
   </ItemGroup>
 
