--- a/src/back-end/UserLayer/LogService/LogAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/LogService/LogAPI/docker-compose.override.yaml
@@ -3,13 +3,26 @@ services:
     ports:
       - '5005:8080'
     environment:
-      DefaultConnection__ConnectionString: mongodb://mongo:27017
+      DefaultConnection__ConnectionString: mongodb://log_mongo:27017
       DefaultConnection__DatabaseName: LogDb
-      DefaultConnection__UserLogsCollectionName: Log
+      DefaultConnection__LogsCollectionName: Logs
+
       ASPNETCORE_ENVIRONMENT: Development
+
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: admin
+      RabbitMQ__Password: admin123
+      RabbitMQ__Exchange: notification.exchange
+
+      RabbitMQ__RoutingKeys__UserLogs__Error: user.logs.error
+      RabbitMQ__RoutingKeys__UserLogs__Audit: user.logs.audit
+      RabbitMQ__RoutingKeys__UserLogs__Info: user.logs.info
+      RabbitMQ__RoutingKeys__Traffic__DailySummary: traffic.analytics.daily_summary
+      RabbitMQ__RoutingKeys__Traffic__CongestionAlert: traffic.analytics.congestion_alert
+      RabbitMQ__RoutingKeys__Traffic__LightControlPattern: traffic.light.control.*
+
     depends_on:
-      rabbitmq:
-        condition: service_healthy
       log_mongo:
         condition: service_started
     networks:
