--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/appsettings.json
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/appsettings.json
@@ -5,17 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-  },
-  "RabbitMQ": {
-    "Host": "",
-    "Port": "",
-    "Username": "",
-    "Password": "",
-    "Exchange": "",
-    "QueueName": "",
-    "RoutingKey": ""
-  }
+  "AllowedHosts": "*"
 }
