--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UserData\UserData.csproj" />
+    <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
   </ItemGroup>
 
 </Project>
