--- a/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
+++ b/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /src
 
 COPY ["UserStore/UserStore.csproj", "UserStore/"]
 COPY ["UserData/UserData.csproj", "UserData/"]
+COPY ["../../UserMessages/UserMessages.csproj", "UserMessages/"]
 
 RUN dotnet restore "UserStore/UserStore.csproj"
 
