--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
@@ -13,19 +13,20 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\UserData\UserData.csproj" />
-    <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Messages/" />
   </ItemGroup>
 
 </Project>
