--- a/src/back-end/UserLayer/LogService/LogAPI/Dockerfile
+++ b/src/back-end/UserLayer/LogService/LogAPI/Dockerfile
@@ -6,17 +6,19 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# 🔹 Copy project files
+# 🔹 Copy project files (LogStore, LogData, UserMessages)
 COPY ["LogStore/LogStore.csproj", "LogStore/"]
 COPY ["LogData/LogData.csproj", "LogData/"]
+COPY ["../../UserMessages/UserMessages.csproj", "../UserMessages/"]
 
 # 🔹 Restore dependencies
 RUN dotnet restore "LogStore/LogStore.csproj"
 
-# 🔹 Copy all source code
+# 🔹 Copy all source code (AFTER restore)
 COPY . .
+COPY ../../UserMessages ../UserMessages
 
-# 🔹 Build project
+# 🔹 Build
 RUN dotnet build "LogStore/LogStore.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
