--- a/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
+++ b/src/back-end/UserLayer/LogService/LogAPI/LogStore/LogStore.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LogData\LogData.csproj" />
+    <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
   </ItemGroup>
 
 </Project>
