--- a/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
+++ b/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
@@ -6,17 +6,19 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# 🔹 Copy project files (από root project context!)
+# 🔹 Copy project files
 COPY ["UserStore/UserStore.csproj", "UserStore/"]
 COPY ["UserData/UserData.csproj", "UserData/"]
+COPY ["../../UserMessages/UserMessages.csproj", "../UserMessages/"]
 
 # 🔹 Restore dependencies
 RUN dotnet restore "UserStore/UserStore.csproj"
 
-# 🔹 Copy all files (must come AFTER restore)
+# 🔹 Copy all source files (AFTER restore)
 COPY . .
+COPY ../../UserMessages ../UserMessages
 
-# 🔹 Build project
+# 🔹 Build
 RUN dotnet build "UserStore/UserStore.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
