--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
@@ -23,10 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UserData\UserData.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Messages/" />
+    <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
   </ItemGroup>
 
 </Project>
