--- a/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
+++ b/src/back-end/UserLayer/UserService/UserAPI/Dockerfile
@@ -7,23 +7,24 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # 🔹 Copy project files
-COPY ["UserStore/UserStore.csproj", "UserStore/"]
-COPY ["UserData/UserData.csproj", "UserData/"]
-COPY ["../../UserMessages/UserMessages.csproj", "UserMessages/"]
+COPY UserService/UserAPI/UserStore/UserStore.csproj UserStore/
+COPY UserService/UserAPI/UserData/UserData.csproj UserData/
+COPY UserMessages/UserMessages.csproj UserMessages/
 
-# 🔹 Restore dependencies
-RUN dotnet restore "UserStore/UserStore.csproj"
+# 🔹 Restore
+RUN dotnet restore UserStore/UserStore.csproj
 
-# 🔹 Copy all source files (AFTER restore)
-COPY . .
-COPY ../../UserMessages ../UserMessages
+# 🔹 Copy all source code
+COPY UserService/UserAPI/UserStore UserStore/
+COPY UserService/UserAPI/UserData UserData/
+COPY UserMessages UserMessages/
 
 # 🔹 Build
-RUN dotnet build "UserStore/UserStore.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build UserStore/UserStore.csproj -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "UserStore/UserStore.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish UserStore/UserStore.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
