--- a/src/back-end/RabbitMQ/docker-compose.yaml
+++ b/src/back-end/RabbitMQ/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
   rabbitmq:
     image: rabbitmq:3.8-management
     container_name: rabbitmq_container
+    networks:
+      - rabbitmq_network
   
 networks:
   rabbitmq_network:
