--- a/src/back-end/LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
+++ b/src/back-end/LogLayer/LogService/LogAPI/LogStore/LogStore.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LogData\LogData.csproj" />
     <ProjectReference Include="..\..\..\..\UserLayer\UserMessages\UserMessages.csproj" />
+    <ProjectReference Include="..\..\..\..\TrafficLayer\TrafficMessages\TrafficMessages.csproj" />
   </ItemGroup>
 
 </Project>
