--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MailKit" Version="4.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
+    <PackageReference Include="MimeKit" Version="4.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
   </ItemGroup>
