--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/docker-compose.override.yaml
@@ -1,5 +1,5 @@
 services:
-  log_api:
+  notification_api:
     ports:
       - '5087:8080'
     environment:
@@ -27,8 +27,6 @@ services:
       EmailSettings__SenderEmail: your_email@gmail.com
       EmailSettings__Username: your_email@gmail.com
       EmailSettings__Password: your_app_specific_password
-
-
 
     depends_on:
       notification_mongo:
