--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/Dockerfile
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/Dockerfile
@@ -3,6 +3,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
+RUN apt-get update && apt-get install -y libgssapi-krb5-2
+
 # 🔹 Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
