--- a/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
+++ b/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\..\TrafficMessages\TrafficMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware/" />
+  </ItemGroup>
+
 </Project>
