--- a/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
+++ b/src/back-end/TrafficLayer/TrafficDataAnalyticsService/TrafficDataAnalyticsAPI/TrafficDataAnalyticsStore/TrafficDataAnalyticsStore.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\..\..\TrafficMessages\TrafficMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Business/" />
+  </ItemGroup>
+
 </Project>
