--- a/src/back-end/SensorLayer/DetectionData/DetectionData.csproj
+++ b/src/back-end/SensorLayer/DetectionData/DetectionData.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="InfluxDB.Client" Version="4.18.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
