--- a/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/VehicleDetectionStore.csproj
+++ b/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/VehicleDetectionStore.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../SensorMessages/SensorMessages.csproj" />
     <ProjectReference Include="..\..\..\DetectionData\DetectionData.csproj" />
   </ItemGroup>
 
