--- a/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/appsettings.json
+++ b/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/appsettings.json
@@ -1,9 +1,37 @@
 {
+  "ASPNETCORE_ENVIRONMENT": "Development",
+
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Port": 5672,
+    "Username": "admin",
+    "Password": "admin123",
+    "SensorDataExchange": "sensor.data.exchange",
+    "RoutingKeys": {
+      "VehicleCount": "sensor.data.vehicle.count",
+    },
+    "SensorLogsExchange": "sensor.logs.exchange",
+    "RoutingKeys": {
+      "SensorLogs": {
+        "Audit": "sensor.logs.audit",
+        "Error": "sensor.logs.error"
+      }
+    }
+  },
+
+  "DetectionDb": {
+    "Url": "http://influxdb:8086",
+    "Token": "admin-token",
+    "Org": "DetectionOrg",
+    "Bucket": "DetectionDb"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
