--- a/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/appsettings.json
+++ b/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/VehicleDetectionStore/appsettings.json
@@ -6,10 +6,12 @@
     "Port": 5672,
     "Username": "admin",
     "Password": "admin123",
+
     "SensorDataExchange": "sensor.data.exchange",
     "RoutingKeys": {
-      "VehicleCount": "sensor.data.vehicle.count",
+      "VehicleCount": "sensor.data.vehicle.count"
     },
+
     "SensorLogsExchange": "sensor.logs.exchange",
     "RoutingKeys": {
       "SensorLogs": {
@@ -25,6 +27,8 @@
     "Org": "DetectionOrg",
     "Bucket": "DetectionDb"
   },
+
+
 
   "Logging": {
     "LogLevel": {
