--- a/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/docker-compose.override.yaml
+++ b/src/back-end/SensorLayer/VehicleDetectionService/VehicleDetectionAPI/docker-compose.override.yaml
@@ -11,18 +11,26 @@ services:
       RabbitMQ__Username: admin
       RabbitMQ__Password: admin123
 
-      RabbitMQ__SensorDataExchange: sensor.data.exchange
-      RabbitMQ__RoutingKeys__VehicleCount: sensor.data.vehicle.count
-      
-      RabbitMQ__SensorLogsExchange: sensor.logs.exchange
-      RabbitMQ__RoutingKeys__SensorLogs__Audit: sensor.logs.audit
-      RabbitMQ__RoutingKeys__SensorLogs__Error: sensor.logs.error
+      # RabbitMQ Exchanges
+      RabbitMQ__Exchange__SensorDataExchange: sensor.data.exchange
+      RabbitMQ__Exchange__LogStoreExchange: log.store.exchange
+
+      # RabbitMQ Queues
+      RabbitMQ__Queue__SensorVehicleDetectionVehicleCountQueue: sensor.vehicle_detection.vehicle_count.queue
+      RabbitMQ__Queue__SensorLogsAuditQueue: sensor.logs.audit.queue
+      RabbitMQ__Queue__SensorLogsErrorQueue: sensor.logs.error.queue
+
+      # RabbitMQ Routing Keys
+      RabbitMQ__RoutingKey__SensorVehicleDetectionVehicleCountKey: sensor.vehicle_detection.vehicle_count.*
+      RabbitMQ__RoutingKey__SensorLogsAuditKey: sensor.vehicle_detection.logs.audit
+      RabbitMQ__RoutingKey__SensorLogsErrorKey: sensor.vehicle_detection.logs.error
 
       # InfluxDB Config
       DetectionDb__Url: http://influxdb:8086
       DetectionDb__Token: admin-token
       DetectionDb__Org: DetectionOrg
       DetectionDb__Bucket: DetectionDb
+
 
     depends_on:
       influxdb:
