--- a/src/back-end/SensorLayer/EmergencyVehicleDetectionService/EmergencyVehicleDetectionAPI/EmergencyVehicleDetectionStore/EmergencyVehicleDetectionStore.csproj
+++ b/src/back-end/SensorLayer/EmergencyVehicleDetectionService/EmergencyVehicleDetectionAPI/EmergencyVehicleDetectionStore/EmergencyVehicleDetectionStore.csproj
@@ -8,11 +8,22 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="InfluxDB.Client" Version="4.18.0" />
+    <PackageReference Include="MassTransit" Version="8.5.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../../../DetectionData/DetectionData.csproj" />
     <ProjectReference Include="../../../SensorMessages/SensorMessages.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Business/" />
+    <Folder Include="Consumers/" />
   </ItemGroup>
 
 </Project>
