--- a/src/back-end/SensorLayer/EmergencyVehicleDetectionService/EmergencyVehicleDetectionAPI/EmergencyVehicleDetectionStore/EmergencyVehicleDetectionStore.csproj
+++ b/src/back-end/SensorLayer/EmergencyVehicleDetectionService/EmergencyVehicleDetectionAPI/EmergencyVehicleDetectionStore/EmergencyVehicleDetectionStore.csproj
@@ -24,6 +24,10 @@
   <ItemGroup>
     <Folder Include="Business/" />
     <Folder Include="Consumers/" />
+    <Folder Include="Controllers/" />
+    <Folder Include="Middleware/" />
+    <Folder Include="Repository/" />
+    <Folder Include="Workers/" />
   </ItemGroup>
 
 </Project>
