--- a/src/back-end/SensorLayer/PedestrianDetectionService/PedestrianDetectionAPI/PedestrianDetectionStore/PedestrianDetectionStore.csproj
+++ b/src/back-end/SensorLayer/PedestrianDetectionService/PedestrianDetectionAPI/PedestrianDetectionStore/PedestrianDetectionStore.csproj
@@ -21,4 +21,15 @@
     <ProjectReference Include="../../../SensorMessages/SensorMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Business/" />
+    <Folder Include="Consumers/" />
+    <Folder Include="Controllers/" />
+    <Folder Include="Middleware/" />
+    <Folder Include="Models/" />
+    <Folder Include="Publishers/" />
+    <Folder Include="Repositories/" />
+    <Folder Include="Workers/" />
+  </ItemGroup>
+
 </Project>
