--- a/src/back-end/TrafficLayer/IntersectionControlService/IntersectionControlAPI/IntersectionControlStore/IntersectionControlStore.csproj
+++ b/src/back-end/TrafficLayer/IntersectionControlService/IntersectionControlAPI/IntersectionControlStore/IntersectionControlStore.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="../../../TrafficMessages/TrafficMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Publishers/LogPub/" />
+  </ItemGroup>
+
 </Project>
