--- a/src/back-end/TrafficLayer/IntersectionControlService/IntersectionControlAPI/docker-compose.override.yaml
+++ b/src/back-end/TrafficLayer/IntersectionControlService/IntersectionControlAPI/docker-compose.override.yaml
@@ -1,7 +1,7 @@
 services:
   intersection_control_api:
     ports:
-      - '5190:8080' # Optional if you want metrics/health endpoints exposed
+      - '5190:8080'
     environment:
       ASPNETCORE_ENVIRONMENT: Development
 
@@ -12,28 +12,41 @@ services:
       RabbitMQ__Password: admin123
 
       # RabbitMQ Exchanges
-      RabbitMQ__Exchange__SensorDataExchange: sensor.data.exchange
+      RabbitMQ__Exchange__PriorityExchange: traffic.priority.exchange
       RabbitMQ__Exchange__TrafficControlExchange: traffic.control.exchange
-      RabbitMQ__Exchange__LogStoreExchange: log.store.exchange
+      RabbitMQ__Exchange__SensorDataExchange: sensor.data.exchange
+      RabbitMQ__Exchange__LogStoreExchange: traffic.logs.exchange
 
-      # RabbitMQ Queues
-      RabbitMQ__Queue__SensorVehicleCountQueue: sensor.vehicle_detection.vehicle_count.queue
-      RabbitMQ__Queue__SensorEmergencyVehicleQueue: sensor.emergency_vehicle_detection.detection.queue
-      RabbitMQ__Queue__SensorPublicTransportQueue: sensor.public_transport_detection.detection.queue
-      RabbitMQ__Queue__SensorPedestrianQueue: sensor.pedestrian_detection.request.queue
-      RabbitMQ__Queue__SensorCyclistQueue: sensor.cyclist_detection.request.queue
-      RabbitMQ__Queue__SensorIncidentQueue: sensor.incident_detection.report.queue
-      RabbitMQ__Queue__TrafficLightStateUpdateQueue: traffic.light_coordination.update.queue
-      RabbitMQ__Queue__SensorLogsAuditQueue: sensor.logs.audit.queue
-      RabbitMQ__Queue__SensorLogsErrorQueue: sensor.logs.error.queue
+      # RabbitMQ Queues (subscribe to sensor data queues)
+      RabbitMQ__Queue__VehicleCountQueue: sensor.data.vehicle_count.queue
+      RabbitMQ__Queue__EmergencyVehicleQueue: sensor.data.emergency_vehicle.queue
+      RabbitMQ__Queue__PublicTransportQueue: sensor.data.public_transport.queue
+      RabbitMQ__Queue__PedestrianRequestQueue: sensor.data.pedestrian_request.queue
+      RabbitMQ__Queue__CyclistRequestQueue: sensor.data.cyclist_request.queue
+      RabbitMQ__Queue__IncidentQueue: sensor.data.incident.queue
 
-      # RabbitMQ Routing Keys
-      RabbitMQ__RoutingKey__SensorVehicleCount: sensor.vehicle_detection.vehicle_count.*
-      RabbitMQ__RoutingKey__SensorEmergencyVehicle: sensor.emergency_vehicle_detection.detection.*
-      RabbitMQ__RoutingKey__SensorPublicTransport: sensor.public_transport_detection.detection.*
-      RabbitMQ__RoutingKey__SensorPedestrian: sensor.pedestrian_detection.request.*
-      RabbitMQ__RoutingKey__SensorCyclist: sensor.cyclist_detection.request.*
-      RabbitMQ__RoutingKey__SensorIncident: sensor.incident_detection.report.*
-      RabbitMQ__RoutingKey__TrafficLightCoordinationUpdate: traffic.light_coordination.update.*
-      RabbitMQ__RoutingKey__SensorLogsAuditKey: sensor.incident_detection.logs.audit
-      RabbitMQ__RoutingKey__SensorLogsErrorKey: sensor.incident_detection.logs.error
+      # RabbitMQ Queues (for commands and priority messages)
+      RabbitMQ__Queue__TrafficLightControlQueue: traffic.light.control.queue
+      RabbitMQ__Queue__PriorityEmergencyVehicleQueue: priority.emergency.vehicle.queue
+      RabbitMQ__Queue__PriorityPublicTransportQueue: priority.public.transport.queue
+      RabbitMQ__Queue__PriorityPedestrianQueue: priority.pedestrian.queue
+      RabbitMQ__Queue__PriorityCyclistQueue: priority.cyclist.queue
+
+      # RabbitMQ Routing Keys for subscribing (sensor data)
+      RabbitMQ__RoutingKey__VehicleCount: sensor.data.vehicle_count.*
+      RabbitMQ__RoutingKey__EmergencyVehicle: sensor.data.emergency_vehicle.*
+      RabbitMQ__RoutingKey__PublicTransport: sensor.data.public_transport.*
+      RabbitMQ__RoutingKey__PedestrianRequest: sensor.data.pedestrian_request.*
+      RabbitMQ__RoutingKey__CyclistRequest: sensor.data.cyclist_request.*
+      RabbitMQ__RoutingKey__Incident: sensor.data.incident.*
+
+      # RabbitMQ Routing Keys for publishing (priority and light control)
+      RabbitMQ__RoutingKey__PriorityEmergencyVehicle: priority.emergency.vehicle.*
+      RabbitMQ__RoutingKey__PriorityPublicTransport: priority.public.transport.*
+      RabbitMQ__RoutingKey__PriorityPedestrian: priority.pedestrian.*
+      RabbitMQ__RoutingKey__PriorityCyclist: priority.cyclist.*
+      RabbitMQ__RoutingKey__TrafficLightControl: traffic.light.control.*
+
+      # Logs
+      RabbitMQ__RoutingKey__TrafficLogsAudit: traffic.logs.audit
+      RabbitMQ__RoutingKey__TrafficLogsError: traffic.logs.error
