--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stls_ui",
+  "name": "stls-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,24 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^13.7.0",
-    "axios": "^1.11.0",
-    "chart.js": "^4.5.0",
-    "echarts": "^5.6.0",
-    "grpc-web": "^1.5.0",
+    "@tailwindcss/vite": "^4.1.12",
     "leaflet": "^1.9.4",
-    "mapbox-gl": "^3.14.0",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
-    "vue-chartjs": "^5.3.2",
-    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
     "vite": "^7.1.2"
   }
 }
