--- a/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
+++ b/src/back-end/UserLayer/UserService/UserAPI/UserStore/UserStore.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumers/" />
+  </ItemGroup>
+
 </Project>
