--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
