--- a/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
+++ b/src/back-end/UserLayer/NotificationService/NotificationAPI/NotificationStore/NotificationStore.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../../LogLayer/LogMessages/LogMessages.csproj" />
     <ProjectReference Include="../../../../TrafficLayer/TrafficMessages/TrafficMessages.csproj" />
     <ProjectReference Include="..\NotificationData\NotificationData.csproj" />
     <ProjectReference Include="..\..\..\UserMessages\UserMessages.csproj" />
